# paytoy

./: .gitignore  Cargo.toml  README.md
src/: account_manager.rs  bench.rs  client_account.rs  main.rs  paytoy.rs  records.rs  transactions_reader.rs
tests/data/: test_locked.csv  test_mt_reader.csv  test_serde.csv
