[package]
name = "paytoy"
version = "0.1.0"
authors = ["Vladislav Cebotari <cebotari.vladislav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }
log = "0.4.14"
env_logger = "0.8.4"
anyhow = "1.0.42"
rust_decimal = "1.14.3"
rust_decimal_macros = "1.14.3"
num_cpus = "1.13.0"
threadpool = "1.8.1"
crossbeam-channel = "0.5.1"
hashbrown = "0.11.2"

